--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valariumlauncher",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "productName": "Valarium Launcher",
   "description": "Modded Minecraft Launcher",
   "author": "Daniel Scalzi (https://github.com/dscalzi/)",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@electron/remote": "^1.0.4",
+    "@xboxreplay/xboxlive-auth": "^3.3.3",
     "adm-zip": "^0.5.4",
     "async": "^3.2.0",
     "discord-rpc": "^3.2.0",
